# edge-detector

./: .gitignore  README.md  STATUS.txt  SUBMISSION.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opencv_processor.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
